--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <distributionManagement>
+   <repository>
+     <id>github</id>
+     <name>GitHub tomjkidd Apache Maven Packages</name>
+     <url>https://maven.pkg.github.com/tomjkidd/java-bootstrap</url>
+   </repository>
+</distributionManagement>
   <properties>
        <java.version>1.11</java.version>
        <maven.compiler.source>11</maven.compiler.source>
